--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="index.css">
   
   <title>Frontend Mentor | Time tracking dashboard</title>
 
@@ -15,66 +16,210 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <div class="card header">
+      <div class="card-header-top">
+        <img src="images\20220524223204_IMG_0992.jpg" alt="">
+        <div>
+          <p>Reported by</p>
+          <h1><span>Md Ariful Islam</span></h1>
+        </div>
+      </div>
+      <div class="card-header-bottom">
+        <button id="daily" class="btn" >Daily</button>
+        <button id="weekly" class="btn" >Weekly</button>
+        <button id="monthly" class="btn">Monthly</button>
+      </div>      
+    </div>
 
-  Report for
-  Jeremy Robson
 
-  Daily
-  Weekly
-  Monthly
 
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
+    <div class="activity-traker-activity work">
+      <div class="activity-bg">
+        <img src="images\icon-work.svg" alt="">
+      </div>
+      <div class="activity-info">
+        <header class="activity-header">
+          <h2 class="activity-name">Work</h2>
+          <div class="activity-option">
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
+          </div>
 
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
+        </header>
+        <div class="activity-timeframes">
+          <h3 class="activity-current-timeframe">32hrs</h3>
+          <div class="activity-previous-timeframe">
+            <p class="time-window">Last Week</p>
+            <p>-</p>
+            <p class="time">36hrs</p>
 
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
+          </div>
 
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
+        </div>
 
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
+      </div>
 
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
+    </div>
 
+    <div class="activity-traker-activity play">
+      <div class="activity-bg">
+        <img src="images\icon-play.svg" alt="">
+      </div>
+      <div class="activity-info">
+        <header class="activity-header">
+          <h2 class="activity-name">Play</h2>
+          <div class="activity-option">
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
+          </div>
+
+        </header>
+        <div class="activity-timeframes">
+          <h3 id="textWeekCurrnt" class="activity-current-timeframe">10hrs</h3>
+          <div class="activity-previous-timeframe">
+            <p class="time-window">Last Week</p>
+            <p>-</p>
+            <p id="textWeekPast" text class="time">8hrs</p>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="activity-traker-activity study">
+      <div class="activity-bg">
+        <img src="images\icon-study.svg" alt="">
+      </div>
+      <div class="activity-info">
+        <header class="activity-header">
+          <h2 class="activity-name">Study</h2>
+          <div class="activity-option">
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
+          </div>
+
+        </header>
+        <div class="activity-timeframes">
+          <h3 id="" class="activity-current-timeframe">4hrs</h3>
+          <div class="activity-previous-timeframe">
+            <p class="time-window">Last Week</p>
+            <p>-</p>
+            <p class="time">7hrs</p>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="activity-traker-activity excercise">
+      <div class="activity-bg">
+        <img src="images\icon-exercise.svg" alt="">
+      </div>
+      <div class="activity-info">
+        <header class="activity-header">
+          <h2 class="activity-name">Exercise</h2>
+          <div class="activity-option">
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
+          </div>
+
+        </header>
+        <div class="activity-timeframes">
+          <h3 class="activity-current-timeframe">4hrs</h3>
+          <div class="activity-previous-timeframe">
+            <p class="time-window">Last Week</p>
+            <p>-</p>
+            <p class="time">5hrs</p>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="activity-traker-activity social">
+      <div class="activity-bg">
+        <img src="images\icon-social.svg" alt="">
+      </div>
+      <div class="activity-info">
+        <header class="activity-header">
+          <h2 class="activity-name">Social</h2>
+          <div class="activity-option">
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
+          </div>
+
+        </header>
+        <div class="activity-timeframes">
+          <h3 class="activity-current-timeframe">5hrs</h3>
+          <div class="activity-previous-timeframe">
+            <p class="time-window">Last Week</p>
+            <p>-</p>
+            <p class="time">10hrs</p>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="activity-traker-activity self-care">
+      <div class="activity-bg">
+        <img src="images\icon-self-care.svg" alt="">
+      </div>
+      <div class="activity-info">
+        <header class="activity-header">
+          <h2 class="activity-name">Self Care</h2>
+          <div class="activity-option">
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
+          </div>
+
+        </header>
+        <div class="activity-timeframes">
+          <h3 class="activity-current-timeframe">2hrs</h3>
+          <div class="activity-previous-timeframe">
+            <p class="time-window">Last Week</p>
+            <p>-</p>
+            <p class="time">2hrs</p>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+    
+  </div>
+  
+  <!-- <div class="box-container">
+    <!- <img class="box-img" src="images\icon-work.svg" alt=""> -->
+    <!-- <div class="time-container">
+      <div class=""> 
+        <h2>Work</h2>
+        <h1>32hrs</h1>
+        
+      </div>
+      <div class="text-right">
+        <img src="images\icon-ellipsis.svg" alt=""> 
+        <p>Last Week-8hrs</p>
+      </div>
+    </div>
+
+  </div> -->
+  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <script src="main.js"></script>
 </body>
 </html>
