--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
         </header>
         <div class="activity-timeframes">
-          <h3 class="activity-current-timeframe">32hrs</h3>
+          <h3 id="textWorkCurrent" class="activity-current-timeframe">32hrs</h3>
           <div class="activity-previous-timeframe">
             <p class="time-window">Last Week</p>
             <p>-</p>
-            <p class="time">36hrs</p>
+            <p id="textWorkPast" class="time">36hrs</p>
 
           </div>
 
@@ -74,11 +74,11 @@
 
         </header>
         <div class="activity-timeframes">
-          <h3 id="textWeekCurrnt" class="activity-current-timeframe">10hrs</h3>
+          <h3 id="textPlayCurrent" class="activity-current-timeframe">10hrs</h3>
           <div class="activity-previous-timeframe">
             <p class="time-window">Last Week</p>
             <p>-</p>
-            <p id="textWeekPast" text class="time">8hrs</p>
+            <p id="textPlayPast" text class="time">8hrs</p>
 
           </div>
 
@@ -101,11 +101,11 @@
 
         </header>
         <div class="activity-timeframes">
-          <h3 id="" class="activity-current-timeframe">4hrs</h3>
+          <h3 id="textStudyCurrent" class="activity-current-timeframe">4hrs</h3>
           <div class="activity-previous-timeframe">
             <p class="time-window">Last Week</p>
             <p>-</p>
-            <p class="time">7hrs</p>
+            <p id="textStudyPast" class="time">7hrs</p>
 
           </div>
 
@@ -128,11 +128,11 @@
 
         </header>
         <div class="activity-timeframes">
-          <h3 class="activity-current-timeframe">4hrs</h3>
+          <h3 id="textExerciseCurrent" class="activity-current-timeframe">4hrs</h3>
           <div class="activity-previous-timeframe">
             <p class="time-window">Last Week</p>
             <p>-</p>
-            <p class="time">5hrs</p>
+            <p id="textExercisePast" class="time">5hrs</p>
 
           </div>
 
@@ -155,11 +155,11 @@
 
         </header>
         <div class="activity-timeframes">
-          <h3 class="activity-current-timeframe">5hrs</h3>
+          <h3 id="textSocialCurrent" class="activity-current-timeframe">5hrs</h3>
           <div class="activity-previous-timeframe">
             <p class="time-window">Last Week</p>
             <p>-</p>
-            <p class="time">10hrs</p>
+            <p id="textSocialPast" class="time">10hrs</p>
 
           </div>
 
@@ -182,11 +182,11 @@
 
         </header>
         <div class="activity-timeframes">
-          <h3 class="activity-current-timeframe">2hrs</h3>
+          <h3 id="textSelfcareCurrent" class="activity-current-timeframe">2hrs</h3>
           <div class="activity-previous-timeframe">
             <p class="time-window">Last Week</p>
             <p>-</p>
-            <p class="time">2hrs</p>
+            <p id="textSelfcarePast" class="time">2hrs</p>
 
           </div>
 
