--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="new.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <main class="container">
         <div class="div1">
             <div class="header-top">
-                <img src="images\20220524223204_IMG_0992.jpg" alt="" >
+                <img src="images\20220524223204_IMG_0992.jpg" width="70px" alt="" >
                 <div class="title">
                     <p>Report for</p>
                     <h1><span>Md Ariful Islam</span></h1>
