--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main class="container">
         <div class="div1">
             <div class="header-top">
-                <img src="images\20220524223204_IMG_0992.jpg" width="70px" alt="" >
+                <img src="images\20220524223204_IMG_0992.jpg" alt="" >
                 <div class="title">
                     <p>Report for</p>
                     <h1><span>Md Ariful Islam</span></h1>
